# cpp-wasm

./: .gitignore  CMakeLists.txt  README.md  emcc-build.sh  main.js
src/: image_processor.cpp
